# Samraksh

./: .gitignore  Ngrok Port forwarding.md  README.md  docker-compose.yml
backend/: .env.sample  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/server/: app.py  auth.py  db.py  sort.py
backend/server/data/: app_data.py
backend/server/detectors/: blockade.py  face.py  person_body.py  weapon.py
backend/server/libs/: upload_img.py
backend/server/resources/: report_lost_child.py  sos.py  user.py
backend/server/routes/: app_data.py  auth.py  live_stream.py  report.py  sos.py
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/SOS/: index.jsx
frontend/src/components/blockade-info/: index.jsx
frontend/src/components/cam-stream/: index.jsx
frontend/src/components/cctvvideoplayer/: index.jsx
frontend/src/components/confirmModal/: index.jsx
frontend/src/components/crowd-info/: index.jsx
frontend/src/components/face-info/: index.jsx
frontend/src/components/footer/: index.jsx
frontend/src/components/lost-person-card/: index.jsx
frontend/src/components/navbar/: icons.jsx  index.jsx
frontend/src/components/sidebar/: index.jsx
frontend/src/components/video-stream/: index.jsx
frontend/src/components/video-upload/: index.jsx
frontend/src/components/weapon-info/: index.jsx
frontend/src/constants/: creators.js  routes.js
frontend/src/hooks/: useVideoStreams.js
frontend/src/page/sos/: index.jsx
frontend/src/routes/: app-routes.jsx
(+9 files in other folders)
